--- a/main.css
+++ b/main.css
@@ -1,3 +1,99 @@
 body {
-  background-color: #999;
+  background-color: #ddd;
+}
+
+/*.panel {
+  padding: 5px;
+  border: 1px solid black;
+  border-radius: 10px;
+}*/
+
+.panel-full {
+  height: 100vh;
+}
+
+.panel-40 {
+  height: 40vh;
+}
+
+.panel-60 {
+  height: 60vh;
+}
+
+.panel-30 {
+  height: 30vh;
+}
+
+.statuslog > .display {
+  width:100%;
+  height:92%;
+  margin:3% 0;
+  background-color:teal;
+  overflow-y:scroll;
+}
+
+.statuslog > .display > .item {
+  border:1px solid grey;
+  background-color:#666;
+  transition: all 2s linear 1s;
+}
+
+.statuslog > .display > .item.new {
+  background-color:#0f0;
+}
+
+.statuscontent {
+  border:1px solid red;
+  height:100%;
+}
+
+.statuscontent .progressbar {
+  position: absolute;
+  bottom:0;
+  right: 0;
+  height:100%;
+  width: 20px;
+  border-radius:2px;
+}
+.statuscontent .progressbar > .fill {
+  width:100%;
+  height: 30%;
+  position:absolute;
+  bottom: 0;
+  background-color: green;
+}
+
+/*.statuscontent::after {
+  content: '';
+  height: attr(data-progress);
+  border-right:5px solid green;
+  bottom:0;
+  right: 0;
+  position: absolute;
+}*/
+
+.statuscontent .woman {
+  background: url('assets/svg/woman/1443139.svg');
+  position:absolute;
+  width:100%;
+  height:50%;
+  bottom:0;
+  left:0;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  z-index:10;
+}
+
+.statuscontent .background {
+  background: url('assets/svg/background/house2.svg');
+  position:absolute;
+  width:100%;
+  height:50%;
+  bottom:0;
+  right:0;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  z-index:5;
 }
