--- a/main.css
+++ b/main.css
@@ -2,11 +2,13 @@ body {
   background-color: #ddd;
 }
 
-/*.panel {
-  padding: 5px;
+.panel {
+  /* padding: 5px;
   border: 1px solid black;
-  border-radius: 10px;
-}*/
+  border-radius: 10px; */
+  opacity:0;
+  transition: opacity 500ms;
+}
 
 .panel-full {
   height: 100vh;
@@ -24,43 +26,55 @@ body {
   height: 30vh;
 }
 
+.panel.statuslog {
+  opacity: 1  ;
+}
 .statuslog > .display {
   width:100%;
   height:92%;
   margin:3% 0;
-  background-color:teal;
+  /* background-color:teal; */
   overflow-y:scroll;
 }
 
 .statuslog > .display > .item {
   border:1px solid grey;
-  background-color:#666;
-  transition: all 2s linear 1s;
+  background-color:#888;
+  transition: background-color 1s linear 50ms;
+  padding: 0 10px;
 }
 
 .statuslog > .display > .item.new {
-  background-color:#0f0;
+  background-color:#009900;
+}
+
+.silhouette {
+  /* background-color: orange; */
+  border-radius: 10px;
 }
 
 .statuscontent {
-  border:1px solid red;
+  /* border:1px solid red; */
   height:100%;
 }
 
 .statuscontent .progressbar {
   position: absolute;
   bottom:0;
-  right: 0;
+  right: -10px;
   height:100%;
   width: 20px;
-  border-radius:2px;
+  border-radius:5px;
+  overflow: hidden;
+  z-index:8;
 }
 .statuscontent .progressbar > .fill {
   width:100%;
-  height: 30%;
+  height: 1%;
   position:absolute;
   bottom: 0;
   background-color: green;
+  transition: height linear 100ms;
 }
 
 /*.statuscontent::after {
@@ -76,24 +90,45 @@ body {
   background: url('assets/svg/woman/1443139.svg');
   position:absolute;
   width:100%;
-  height:50%;
-  bottom:0;
+  height:100%;
+  bottom:10px;
   left:0;
-  background-size: 100%;
+  background-size: 100px;
   background-repeat: no-repeat;
-  background-position: bottom;
+  background-position-y: bottom;
+  background-position-x: center;
   z-index:10;
+  transition: background-size 500ms ease-in;
 }
 
 .statuscontent .background {
   background: url('assets/svg/background/house2.svg');
   position:absolute;
   width:100%;
-  height:50%;
-  bottom:0;
+  height:100%;
+  bottom:10px;
   right:0;
-  background-size: 100%;
+  background-size: 100px;
   background-repeat: no-repeat;
-  background-position: bottom;
+  background-position-y: bottom;
+  background-position-x: center;
+  opacity: 50%;
   z-index:5;
+}
+
+.statuscontent .background.house2 {
+  background-size: 475px;
+  background-position-x: center;
+}
+
+.statuscontent .statsPanel {
+  /* background-color: blue; */
+  border: 1px solid #333;
+  border-radius: 10px;
+  margin: 10px 0;
+  padding: 10px;
+}
+
+.girlstats {
+  margin-bottom: 0;
 }
